# Taller2Match

./: .gitattributes  .gitignore  .travis.yml  README.md  index.js
ApplicationServer/: .gitignore  CMakeLists.txt  Dockerfile  README.md  READMEAppServer.md  ejemploMongoose.cpp  ejemploRocksDB.cpp  log.txt  main.cpp  runTests.sh
ApplicationServer/ApiTest/: CMakeLists.txt  Semaforo.cpp  Semaforo.h  apiTests  app.info  curlRequests.py  curlRequests.sh  ejemploGoogleTest.cpp  ejemploGoogleTest.gcno  main.cpp  main.gcda  main.gcno  tests
ApplicationServer/ApiTest/html/: index-sort-f.html  index-sort-l.html  index.html
ApplicationServer/ApiTest/scripts/: candidates.py  chat.py  deleteuser.py  like.py  login.py  logout.py  signup.py
ApplicationServer/app/: CMakeLists.txt  Makefile
ApplicationServer/app/app/: CMakeLists.txt
ApplicationServer/app/doc/: Doxyfile
ApplicationServer/app/src/: ClientHandler.cpp  ClientHandler.h  ConnectionToShared.cpp  ConnectionToShared.h  DB.cpp  DB.h  DBManager.cpp  DBManager.h  HTTPMessageBuilder.cpp  HTTPMessageBuilder.h  HTTPRequest.cpp  HTTPRequest.h  HTTPResponse.cpp  HTTPResponse.h  Server.cpp  Server.h  SharedServerConnection.h  TokenManager.cpp  TokenManager.h  UserProfile.cpp  UserProfile.h  jsoncpp.cpp  main.cpp  utils.cpp  utils.h
ApplicationServer/app/test/: CMakeLists.txt
ApplicationServer/appId_email/: IDENTITY  LOG  LOG.old.1464900515094762  LOG.old.1464901366263801  LOG.old.1466622970852774  OPTIONS-000005  OPTIONS-000011
ApplicationServer/candidates/: IDENTITY  LOG  LOG.old.1464900515212904  LOG.old.1464901366356664  LOG.old.1466622970945587  OPTIONS-000005  OPTIONS-000011
ApplicationServer/db/: README.md
ApplicationServer/db/candidates/: IDENTITY  LOG  LOG.old.1466623568662634  LOG.old.1466623752658664  LOG.old.1466624075664903  LOG.old.1466624311076744  LOG.old.1466624655188957  LOG.old.1466624771164676  LOG.old.1466624784568516  LOG.old.1466624985946412  LOG.old.1466625388053454  OPTIONS-000029
ApplicationServer/db/chat_db/: IDENTITY  LOG  LOG.old.1466623569302979  LOG.old.1466623753234119  LOG.old.1466624076256761  LOG.old.1466624311735846  LOG.old.1466624655907005  LOG.old.1466624771774011  LOG.old.1466624785210625  OPTIONS-000029  (+2 more)
ApplicationServer/dislikes/: IDENTITY  LOG  LOG.old.1464900515516757  LOG.old.1464901366653251  LOG.old.1466622971240742  OPTIONS-000008  OPTIONS-000011
ApplicationServer/doc/: Doxyfile
ApplicationServer/ejemploDocker/: Dockerfile  Makefile  restful_server.c
ApplicationServer/email_appId/: IDENTITY  LOG  LOG.old.1464900514934955  LOG.old.1464901366171165  LOG.old.1466622970758965  OPTIONS-000008  OPTIONS-000011
ApplicationServer/email_pwd/: 000004.sst  000007.sst  IDENTITY  LOG  LOG.old.1464900514807099  LOG.old.1464901366069488  LOG.old.1466622970630661  MANIFEST-000005  MANIFEST-000008  OPTIONS-000008  OPTIONS-000011
ApplicationServer/email_sharedId/: 000004.sst  000007.sst  IDENTITY  LOG  LOG.old.1464900088931554  LOG.old.1464900514688823  LOG.old.1464900514934709  LOG.old.1464901365942788  LOG.old.1464901366170861  LOG.old.1466621729919216  LOG.old.1466622970511384  LOG.old.1466622970758719  MANIFEST-000005  MANIFEST-000008  OPTIONS-000005  OPTIONS-000008
ApplicationServer/email_userId/: 000004.sst  000007.sst  IDENTITY  LOG  LOG.old.1464900514570755  LOG.old.1464901365816254  LOG.old.1466622970384855  MANIFEST-000005  MANIFEST-000008  OPTIONS-000005  OPTIONS-000008
ApplicationServer/likes/: IDENTITY  LOG  LOG.old.1462727758791685  LOG.old.1462735232257392  LOG.old.1462745905451100  LOG.old.1462746787193068  LOG.old.1462930535538434  LOG.old.1464899962596694  LOG.old.1464899983805037  LOG.old.1464900089547282  LOG.old.1464900515415238  LOG.old.1464901366551991  LOG.old.1466621730599535  LOG.old.1466622971139443  MANIFEST-000038  OPTIONS-000035  OPTIONS-000041
ApplicationServer/likesReceived/: IDENTITY  LOG  LOG.old.1464900515322481  LOG.old.1464901366450923  LOG.old.1466622971038347  OPTIONS-000005  OPTIONS-000011
ApplicationServer/limit/: IDENTITY  LOG  LOG.old.1464900515712907  LOG.old.1464901366814430  LOG.old.1466622971452645  OPTIONS-000008
ApplicationServer/login/: 000004.sst  IDENTITY  LOG  LOG.old.1464899962384790  LOG.old.1464899983675306  MANIFEST-000008  OPTIONS-000011
ApplicationServer/matches/: IDENTITY  LOG  LOG.old.1462727758909451  LOG.old.1462735232350309  LOG.old.1462745905561847  LOG.old.1462746787303974  LOG.old.1462930535781559  LOG.old.1464899962731316  LOG.old.1464899983899213  LOG.old.1464900089792058  LOG.old.1464900515611420  LOG.old.1464901366729678  LOG.old.1466622971358942  OPTIONS-000035  OPTIONS-000041
ApplicationServer/noMatches/: IDENTITY  LOG  LOG.old.1462727759035559  LOG.old.1462735232453182  LOG.old.1462745905679796  LOG.old.1462746787396504  LOG.old.1462930536016037  LOG.old.1464899962865836  LOG.old.1464899984000347  OPTIONS-000023
ApplicationServer/src/: Date.h  HTTPRequest.cpp  HTTPRequestSender.cpp  HTTPRequestSender.h  HTTPResponse.h  HandlerSelector.cpp  HandlerSelector.h  Interest.cpp  Interest.h  MatchHandlerSelector.cpp  MatchHandlerSelector.h  Server.cpp  Server.h  SharedData.h  SharedServerConnection.cpp  SharedServerConnection.h  TokenManager.cpp  UserProfile.cpp  UserProfile.h  UsersProfiles.cpp  UsersProfiles.h  jsoncpp.cpp  logger.cpp  logger.h  util.cpp  util.h  utils.cpp  utils.h
ApplicationServer/test/: CMakeLists.txt  unitTests
ApplicationServer/userId_email/: 000004.sst  000007.sst  IDENTITY  LOG  LOG.old.1464900514418538  LOG.old.1464901365632656  LOG.old.1466622970232507  MANIFEST-000005  MANIFEST-000008  OPTIONS-000005  OPTIONS-000008
(+1521 files in other folders)
